--- a/package.json
+++ b/package.json
@@ -31,7 +31,26 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/autoprefixer": "^9.7.2",
+    "@types/gulp": "^4.0.6",
+    "@types/gulp-concat": "0.0.32",
+    "@types/gulp-postcss": "^8.0.0",
+    "@types/gulp-rename": "0.0.33",
+    "@types/gulp-sass": "^4.0.0",
+    "@types/node": "^14.0.4",
+    "@types/node-sass": "^4.11.1",
     "gulp": "^4.0.2",
-    "husky": "^4.2.5"
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "husky": "^4.2.5",
+    "node-sass": "^4.14.1",
+    "prettier": "2.0.5"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.8.0",
+    "esm": "^3.2.25"
   }
 }
