--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "gulp buildCss",
-    "watch:sass": "gulp watchSass"
+    "watch:sass": "gulp watchCss"
   },
   "husky": {
     "hooks": {
